@@ -1,4 +1,10 @@
-2007-01-30  Yves Combe <yves@ycombe.net>
+2007-01-30  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* prepare-ChangeLog.pl: imported new one to support svn, taken from
+	http://www.gnome.org/~fherrera/patches/prepare-ChangeLog.pl
+
+
+2007-01-30  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	GCompris no more use a library libgcompris
 
